<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.operations.AddExpenseFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Xpenditure.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_expense"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Xpenditure.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/create_board_content_padding"
            android:background="@drawable/ic_background">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/card_view_elevation"
                app:cardCornerRadius="@dimen/card_view_corner_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/card_view_layout_content_padding">

                    <!--
                                    <de.hdodenhof.circleimageview.CircleImageView
                                        android:id="@+id/iv_board_image"
                                        android:layout_width="@dimen/board_image_size"
                                        android:layout_height="@dimen/board_image_size"
                                        android:contentDescription="@string/image_contentDescription"
                                        android:src="@drawable/ic_board_place_holder" />
                    -->

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/my_profile_et_email_marginTop">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_add_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/date"
                            android:textSize="@dimen/et_text_size" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!--style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->

                   <!-- <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/my_profile_et_email_marginTop"
                        android:hint="Merchant"
                        >

                        <AutoCompleteTextView
                            android:id="@+id/etMerchant_autoCompleteTextView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingTop="16dp"
                            android:paddingBottom="16dp"
                            android:hint="@string/merchant"
                            android:inputType="none"
                            android:layout_weight="1"
                            android:text="" />
                    </com.google.android.material.textfield.TextInputLayout>-->

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/my_profile_et_email_marginTop">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_merchant"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:hint="@string/merchant"
                            android:textSize="@dimen/et_text_size" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/my_profile_et_email_marginTop">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_total_amount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/total"
                            android:inputType="number"
                            android:textSize="@dimen/et_text_size" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/my_profile_et_email_marginTop">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_comment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:hint="@string/comment"
                            android:textSize="@dimen/et_text_size" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/iv_receipt_image"
                            android:layout_width="@dimen/add_screen_place_image_size"
                            android:layout_height="@dimen/add_screen_place_image_size"
                            android:layout_marginTop="@dimen/add_screen_place_image_marginTop"
                            android:background="@drawable/shape_image_view_border"
                            android:padding="@dimen/add_screen_place_image_padding"
                            android:scaleType="centerCrop"
                            android:src="@drawable/add_screen_image_placeholder"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_select_current_location" />


                        <TextView
                            android:id="@+id/tv_add_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/add_screen_text_add_image_marginTop"
                            android:layout_marginStart="12dp" android:background="?attr/selectableItemBackground"
                            android:gravity="center"
                            android:padding="@dimen/add_screen_text_add_image_padding"
                            android:clickable="true"
                            android:text="@string/text_add_image"
                            android:textColor="#63ace5"
                            android:textSize="@dimen/add_screen_text_add_image_textSize"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@+id/btn_save"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.45"
                            app:layout_constraintStart_toEndOf="@+id/iv_place_image"
                            app:layout_constraintTop_toBottomOf="@+id/tv_select_current_location"
                            app:layout_constraintVertical_bias="0.019" />

                    </LinearLayout>

<!--
                    <color name="button_background_color">#63ace5</color>#4b86b4</color>#adcbe3</color>-->

            <Button
                        android:id="@+id/btn_add_expense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/my_profile_btn_update_marginTop"
                        android:visibility="visible" android:background="@drawable/shape_button_rounded"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:paddingTop="@dimen/btn_paddingTopBottom"
                        android:paddingBottom="@dimen/btn_paddingTopBottom"
                        android:text="@string/add"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/btn_text_size" />
            <Button
                        android:id="@+id/btn_update_expense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone" android:layout_marginTop="@dimen/my_profile_btn_update_marginTop"
                        android:background="@drawable/shape_button_rounded"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:paddingTop="@dimen/btn_paddingTopBottom"
                        android:paddingBottom="@dimen/btn_paddingTopBottom"
                        android:text="@string/update"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/btn_text_size" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>

</LinearLayout>